# multimodal-rag-system

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md
eval/datasets/: starter_eval.jsonl
scripts/: deploy_local.ps1  restart_local.ps1  run_eval_smoke.py  status_local.ps1  stop_local.ps1
src/multimodal_rag/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py
src/multimodal_rag/api/: __init__.py  app.py  deps.py  jobs.py  schemas.py
src/multimodal_rag/embedding/: __init__.py  hash_embedder.py  providers.py
src/multimodal_rag/eval/: __init__.py  harness.py  models.py
src/multimodal_rag/generation/: __init__.py  synthesizer.py
src/multimodal_rag/ingestion/: __init__.py  chunking.py  extractors.py  loader.py  vision.py
src/multimodal_rag/retrieval/: __init__.py  hybrid.py  reranker.py
src/multimodal_rag/storage/: __init__.py  base.py  factory.py  faiss_store.py  qdrant_store.py
tests/: test_api.py  test_chunking.py  test_engine.py  test_eval_harness.py  test_faiss_store.py  test_pdf_layout_utils.py  test_retrieval_hybrid.py
